--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,13 @@ add a selector for elements with class "item-watchlist"
 give these elements a display property of inline-block
 and then style them as shown in the example (padding, margin, background, etc)
 */
+.item-watchlist {
+	display: inline-block;
+	padding: 60px 60px 60px 60px;
+	margin: 10px 10px 0px 0px;
+	background-color: rgb(255, 165, 0);
+	color: rgb(255, 255, 255) !important;
+}
 
 
 /*
@@ -20,7 +27,9 @@ Make all elements have color: gray; by default
 Hint: just apply the style using a parent selector, and then all 
 descendent elements will automatically inherit the same styles
 */
-
+* {
+	
+}
 
 #big-header {
 	background: gray;
@@ -55,6 +64,9 @@ button, input[type="submit"] {
 	TODO 7
 	give these buttons some padding, and color them orange with white text
 	*/
+	background-color: rgb(255, 165, 0);
+	color: rgb(255, 255, 255);
+	padding: 10px 10px 10px 10px;
 }
 
 button:disabled {
